--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -16,6 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - run: pip3 install -r requirements.txt
       - run: sudo apt install -y mandoc python3-autopep8
 
       - run: make check
