--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - run: pip3 install -r requirements.txt
+      - run: sudo apt-get remove --purge man-db
       - run: sudo apt install -y mandoc python3-autopep8
 
       - run: make check
